--- a/Display/Device.storyboard
+++ b/Display/Device.storyboard
@@ -408,7 +408,7 @@
                                 <rect key="frame" x="10" y="292" width="394" height="444"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="67" id="Bbp-ac-OG1" customClass="WifiTableViewCell" customModule="MECS" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="WifiCell" rowHeight="67" id="Bbp-ac-OG1" customClass="WifiTableViewCell" customModule="MECS" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="44.5" width="394" height="67"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Bbp-ac-OG1" id="3zL-sR-KmV">
@@ -454,7 +454,7 @@
                                         <connections>
                                             <outlet property="lockImageView" destination="j3L-Eh-2bQ" id="jl2-80-OOI"/>
                                             <outlet property="wifiImageView" destination="j1P-pk-cnv" id="3AI-5W-OQb"/>
-                                            <outlet property="wifiNameLabel" destination="TIn-ck-x9z" id="nuO-5g-yba"/>
+                                            <outlet property="wifiNameLabel" destination="84J-LQ-Ev6" id="Pxs-su-8ym"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
